--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
                 skills in a space where they feel both comfortable and safe, while building long-lasting relationships with 
                 positive role models. Founded on the principle of women supporting women, our program seeks to create a support 
                 system for younger women involved in Lincoln-Douglas Debate, a male-dominated activity. We believe that competitive 
-                success shouldn’t come at the expense of a woman’s safety and wellbeing, and hope to foster an environment 
+                success shouldn’t come at the expense of a woman’s safety and wellbeing, and we hope to foster an environment 
                 where both are possible. 
             </p>
             <div class="who-we-are-header">
@@ -37,7 +37,7 @@
             
     
           <div>
-            <h5 style = "float:left;" > Lindsey Perlman: Editor-in-Chief</h5>
+            <h5 style = "float:left;" > Lindsey Perlman: Editor-in-Chief | Byram Hills High School</h5>
             <hr style="height:20pt; visibility:hidden;" />
             <p style="float: left;"><img class= "claire" src="../../assets/images/lindsey-perlman.jpg" ></p>
               <p>
@@ -50,7 +50,7 @@
           </div>
           <hr style="height:50pt; visibility:hidden;" />
           <div>
-              <h5 style="float:left;"> Claire Liu: Web Developer</h5>
+              <h5 style="float:left;"> Claire Liu: Web Developer | Stuyvesant High School</h5>
               <hr style="height:20pt; visibility:hidden;" />
                 <p style="float: left;"><img class= "claire" src="../../assets/images/claire-liu.jpg" ></p>
                 <p>
@@ -59,7 +59,7 @@
               </div>
               <hr style="height:50pt; visibility:hidden;" />
           <div>
-              <h5 style="float:left;">  Julia Wu: Program Development  </h5>
+              <h5 style="float:left;">  Julia Wu: Program Development | Lake Highland Preparatory </h5>
               <hr style="height:20pt; visibility:hidden;" />
                 <p style="float: left;"><img class= "claire" src="../../assets/images/julia-wu.jpg" ></p>
                 <p>
@@ -68,20 +68,27 @@ Julia Wu is a senior at Lake Highland Preparatory School in Florida. After being
                 </p>
             </div>
             <hr style="height:50pt; visibility:hidden;" />
-    
-              <h5>Amy Pu</h5>
-              <p>photo</p>
-              <p>bio</p>
+            <div>
+                <h5 style="float:left;"> Amy Pu</h5>
+                <hr style="height:20pt; visibility:hidden;" />
+                  <p style="float: left;"><img class= "claire" src="../../assets/images/amy-pu.jpg" ></p>
+                  <p>
+                    Amy is a rising sophomore at Brown University. She debated throughout high school and now debates as a part of the Brown Debating Union. She was astonished to find the distinct efforts in inclusion and diversity from the college debating circuit, realizing the rampant sexism she experienced should not be passively accepted. She truly appreciates the close friendships she currently has with older female mentors. Pursuing a career in computer science, she hopes to use what she's learned to bridge the gaps facing other debaters today.                    </p>
+                </div>
               <div class="who-we-are-header">
 adult sponsers
                   <hr style="height: 3px; width: 25%; background-color: #3c3059">
                   <hr style="height: 2px; width: 15%; background-color: #84b7b1">
 
                 </div>
+                <p> 
+                Our adult sponsors are highly experienced and educated individuals dedicated to helping women and other marginalized groups in debate. They have worked with Lincoln-Douglas debaters before and were once competitors themselves, which gives them unique insight into how to guide our program. They oversee the functioning of our program and ensure the safety of all of our mentees.
+            </p>
+            <hr style="height:30pt; visibility:hidden;" />
                 <div>
-                    <h5 style = "float:left;" > Becca Traber</h5>
+                    <h5 style = "float:left;" > Becca Traber | Yale University</h5>
                     <hr style="height:20pt; visibility:hidden;" />
-                    <p style="float: left;"><img class= "claire" src="../../assets/images/lindsey-perlman.jpg" ></p>
+                    <p style="float: left;"><img class= "claire" src="../../assets/images/becca-traber.jpg" ></p>
                       <p>
                           Becca is a coach for Lake Highland Prep as well for several independent students. As a debater for the Kinkaid School, she earned eleven career TOC bids, won Berkeley and was a finalist at TFA state tournament and the TOC. As a coach, she has coached 14 students to the TOC and 4 students to TOC outrounds. At invitational tournaments, her students have accumulated over 40 TOC bids. Outside of debate, Becca is a PhD candidate at Yale University in political science, specializing in political theory. Her research is at the intersection of deliberative democracy, the study of social movements, and the philosophy of race and gender.
 
@@ -89,7 +96,7 @@ adult sponsers
                   </div>
                   <hr style="height:50pt; visibility:hidden;" />
                   <div>
-                      <h5 style = "float:left;" > Zoe Ewing</h5>
+                      <h5 style = "float:left;" > Zoë Ewing | Columbia University</h5>
                       <hr style="height:20pt; visibility:hidden;" />
                       <p style="float: left;"><img class= "claire" src="../../assets/images/zoe-ewing.jpg" ></p>
                         <p>
@@ -98,15 +105,22 @@ adult sponsers
                     </div>
                     <hr style="height:50pt; visibility:hidden;" />
                     <div>
-                        <h5 style = "float:left;" > Mina Lee</h5>
+                        <h5 style = "float:left;" > Mina Lee | Princeton University</h5>
                         <hr style="height:20pt; visibility:hidden;" />
                         <p style="float: left;"><img class= "claire" src="../../assets/images/mina-lee.jpg" ></p>
                           <p>
                               Mina is thrilled to be a part of W.in Debate. She believes that having a strong support system in debate is vital, and she is excited to contribute. If it hadn’t been for other strong womxn in the community, she would not have been able to see her debate career through to the end of senior year. She would love more than anything to help be a part of that support system for other young womxn in the community.
-
                           </p>
                       </div>
-                      <hr style="height:50pt; visibility:hidden;" />
+                      <hr style="height:100pt; visibility:hidden;" />
+                      <div>
+                        <h5 style = "float:left;" > Logan Reed | New York University</h5>
+                        <hr style="height:20pt; visibility:hidden;" />
+                        <p style="float: left;"><img class= "claire" src="../../assets/images/mina-lee.jpg" ></p>
+                          <p>
+                              Logan Bio
+                          </p>
+                      </div>
           </div>
         </div>
       </div>
