--- a/src/app/mentees/mentees.component.html
+++ b/src/app/mentees/mentees.component.html
@@ -21,11 +21,11 @@
               As a mentee, you will:
             </h1>
             <ul class="list" > 
-              <li> <b> Improve your debating skills </b> by working with our mentors on speeches, cases, and content. </li>
+              <li> <b class="special"> Improve your debating skills </b> by working with our mentors on speeches, cases, and content. </li>
               <li> 
-                <b> Access all of W.in Debate’s resources </b> such as card files and cases. </li>
+                <b class="special"> Access all of W.in Debate’s resources </b> such as card files and cases. </li>
               <li> 
-               <b> Be part of a network of intelligent and accepting women</b> that will support you, both inside and outside of debate.</li>
+               <b class="special"> Be part of a network of intelligent and accepting women</b> that will support you, both inside and outside of debate.</li>
             </ul>
             <div style="text-align: center">
               <button class="signup-button" (click)="openSignup()">Become a mentee!</button>
@@ -40,7 +40,7 @@
             </h1>
             <ul class= "list" style="list-style-type:none">
               <li>
-                After prospective mentees fill out our Google Application Form, W.in Debate will match them with mentors in their region that have similar debating styles and interests. All of our mentors have had a track record for success in debate, and were chosen because of their outstanding character and commitment to helping others. Mentees will then receive an email with their assigned mentor and their contact information when the matching process is complete. From there, mentees will be able to schedule video-chat sessions with their mentors to work on any debate skill of their choosing. 
+                After prospective mentees fill out our Google Application Form, W.in Debate will match them with mentors in their region that have similar debating styles and interests. All of our mentors have had a track record of success in debate, and they were chosen because of their outstanding character and commitment to helping others. Mentees will then receive an email with their assigned mentor and their contact information when the matching process is complete. From there, mentees will be able to schedule video-chat sessions with their mentors to work on any debate skill of their choosing. 
               </li>
             </ul>
             <h1 class="title">
@@ -95,7 +95,7 @@
                                                 Are mentees required to do debate work with their mentors?
                                               </h1>
                                               <ul class= "list" style="list-style-type:none">
-                                                  <li>                     No. If a mentee only wishes to discuss concerns or grievances with a mentor, they are free to do so.            
+                                                  <li>                     No. If mentees only wish to discuss concerns or grievances with their mentor, they are free to do so.            
                                                     </li>
                                                 </ul>
                   
