--- a/src/app/mentors-signup/mentors-signup.component.html
+++ b/src/app/mentors-signup/mentors-signup.component.html
@@ -43,6 +43,11 @@
                 <label for="">School</label>
                 <input type="text" [(ngModel)]="mentor.school" class="form-control" placeholder="School" name="school" required>
               </div>
+              
+              <div class="form-group">
+                <label for="">Gender Pronoun</label>
+                <input type="text" [(ngModel)]="mentor.genderPronoun" class="form-control" placeholder="Gender Pronoun" name="genderPronoun" required>
+              </div>
   
               <div class="form-group">
                 <label for="">Experience</label>
