--- a/src/app/mentors/mentors.component.html
+++ b/src/app/mentors/mentors.component.html
@@ -12,7 +12,7 @@
 
               <ul id="rig">
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/simran-gandhi.jpg" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text"><u>Simran Gandhi, Lexington HS (MA) </u><br><br>
@@ -30,7 +30,7 @@
                       </a>
                   </li>
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/madi-crowley .jpg" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
@@ -44,7 +44,7 @@
                       </a>
                   </li>
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/sanjana-bhatnagar.jpg" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
@@ -57,7 +57,7 @@
                       </a>
                   </li>
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/isabella-nadel.jpg" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
@@ -74,7 +74,7 @@
               <br>
               <ul id="rig">
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/avery-fortier.png" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
@@ -87,7 +87,7 @@
                       </a>
                   </li>
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/sally-ho.jpg" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
@@ -99,7 +99,7 @@
                       </a>
                   </li>
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/abby-morris.jpg" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
@@ -113,7 +113,7 @@
                       </a>
                   </li>
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/megan-wu.png" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
@@ -128,7 +128,7 @@
               <br>
               <ul id="rig">
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/nicole-gladstein.jpg" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
@@ -141,7 +141,7 @@
                       </a>
                   </li>
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/parnika-agrawal.png" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
@@ -154,7 +154,7 @@
                       </a>
                   </li>
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell">
                           <img class="rig-img" src="../../assets/images/mimi-laplant.jpeg" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
@@ -167,7 +167,7 @@
                       </a>
                   </li>
                   <li>
-                      <a class="rig-cell" href="#">
+                      <a class="rig-cell" >
                           <img class="rig-img" src="../../assets/images/lauren-gilbert.png" />
                           <span class="rig-overlay"></span>
                           <span class="rig-text">
