--- a/src/app/mentees/mentees.component.css
+++ b/src/app/mentees/mentees.component.css
@@ -7,6 +7,8 @@
     width: 100%;
     overflow: hidden;
 }
+.special{
+    color: rgb(95, 69, 145);}
 
 .mentees-page-top{
     
@@ -48,8 +50,8 @@
 }
 
 .title{
-   color: rgb(68, 47, 107);
-    font-size: 1.7rem;
+    color: rgb(95, 69, 145);
+        font-size: 1.7rem;
     font-family: "Sawarabi Gothic";
     /*text-align: center;*/
 }
