added lindsey's article

--- a/src/app/lindsey-article/lindsey-article.component.html
+++ b/src/app/lindsey-article/lindsey-article.component.html
@@ -1,4 +1,86 @@
-<p>
-  lindsey-article works!
-  LASIDFJKLSDFJKDLSJFKLDSJFLKSDJFKLSD
+<section class="lindsey-page-top">
+  <div class="container">
+    <div class="row">
+      <div class="col">
+          <div class="lindsey-article-header" style="color: black;">
+            Fighting for a Place in the Front <br>
+            <p class="small">
+              Lindsey Perlman
+            </p>
+            <hr style="height: 3px; width: 25%; background-color: #3c3059">
+            <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+          </div>
+          </div>
+          </div>
+          </div>
+          <p class="article">
+          
+
+Thank you to Camille Caldera, Zoe Ewing, Brianna Aaron, Megan Wu, Grant Brown, Carolyn Lau, Ben Koh, and SunHee Simon-Mbong for their input, support, and kindness.
+
+<br>
+<br>
+The lecture hall, packed full of people, erupted with applause as the timer from the 2ar went off. Within seconds, the front of the room became saturated with swarms of coaches and competitors. But of those thirty or so people that flooded the front of the room, something was missing: not a single woman was among them. Left out of the celebration, every woman in the room remained in the audience, watching from their seats as male coaches and debaters paraded around them exuberantly.
+
+<br>
+<br>
+
+What is wrong with this image? Why did not a single woman feel comfortable enough to join the men at the front? Most importantly, what caused all of the women to feel relegated to the back of the room?
+
+<br>
+<br>
+I asked these questions to about twenty men who were present during the round. And the answers I received confirmed that gender divisions in debate run much deeper than outright sexism --- they stem largely from a toxic culture that is strong enough to render them normal.
+
+<br>
+<br>
+Most of the men attempted to explain the situation by arguing that the two male debaters who were waiting for their judges’ decisions happened to have more male friends than female friends. But that explanation cannot possibly be sufficient-- both male debaters undoubtedly had at least one female friend, and not a single woman joined in their celebration. Others grew defensive, arguing that the women in the audience could have come to the front of the room if they really wanted to. A third group of men expressed guilt for not trying to include women into their celebration. Regardless of their opinions, almost every man that I talked to had the same reaction to my questions: one of surprise and bewilderment. They hadn’t remembered the celebration happening that way. Puzzled, and slightly confused, they did not fathom that such a disparity existed until I told them.
+<br>
+<br>
+The fact that the disparity initially appeared normal to many of the men I talked to is a testament to a broader, systemic problem: gender divisions have become so ordinary that they are not consciously recognized. 
+<br>
+<br>
+Ultimately, this phenomenon cannot be considered apart from a growing culture that operates in such an underhanded manner that many can’t even recognize it in its purest form: the “bro culture.” This culture is one of subtleties; it permits and enables acts of sexism that aren’t severe enough to warrant punishment or condemnation, but prevalent enough to make women feel demeaned and excluded. Although there is no single definition of “bro culture” in debate, it boils down to the same concept every time-- the systematic degradation of women by immature conglomerates of male debaters, coaches, and educators. And to those who ask, what about conglomerates of female debaters, coaches, and educators -- the reality is, there just aren't enough of us to have as powerful a social dynamic. Even today, the limited number of strong female groups that exist don’t get the same respect-- they are referred to as “cliques” that “just gossip.” 
+<br>
+<br>
+Though not all sexism in debate is a result of the “bro culture,” the prevalence of sexist mindsets, attitudes, and beliefs across younger members of the community can be attributed to it. When a woman witnesses or hears of the “locker room talk” that her male counterparts say about her, online or in person, it is a product of the bro culture. When a young male coach or student winks at a female debater, it is a product of the bro culture. When a female debater has to deal with sexually suggestive comments, jokes, and gestures from younger men in the community, it is a product of the bro culture. These aggressions encumber women of all ages, ethnicities, religions, social classes, and skill levels, reducing them from the dignified people they are to objects of male pleasure. The culture forces women into a paradox where they have a desire for success, but fear it at the same time; a woman’s debate success is often weaponized, giving the “bro squad” another reason to continue objectifying her. Debate stops being a place of empowerment and learning and instead becomes source of constant anxiety and stress. 
+<br>
+<br>
+	And yet, time and time again, the community is stuck wondering why women don’t want to stand at the front of the room. 
+  <br>
+  <br>
+The harsh reality is that in most cases, sexist behaviors are not penalized. In fact, quite the opposite occurs-- a significant amount of the time, men who engage in these behaviors are idolized. By ridiculing women in the activity, men are able to move up the unspoken hierarchy that defines this communal “bro’s club.” Insular groups and entire networks of friends are often structured around the exclusion of women. Whether it’s in an online group chat or in person, entire conversations among men begin where women are the punchline of shared jokes. In an activity where debaters bond over casually deriding other debaters, women are easy targets. And since these friendships can be crucial for things such as prep sharing and practice rounds, many people are willing to look beyond flaws in character, choosing greater competitive success and popularity over human decency. This entire process culminates in a cycle of younger, less experienced debaters lionizing upperclassmen that, although competitively successful, are devoid of morals -- and the formation of a “bro” club to which women will never be granted entry.
+<br>
+<br>
+	It’s about time the community wakes up from its ignorant trance and begins to question the values that it endorses, consciously or unconsciously, and the consequences of such endorsements. 
+  <br>
+  <br>
+	The reason that such a toxic culture is able to persist, despite the liberal views of debaters and coaches and their commitment to inclusion, is because of complicity. Far too many people are comfortable being bystanders in the face of this subtle version of sexism. And because this version of sexism is so common, and sometimes so discreet, bystanders are able to get away with proclaiming innocence. 
+  <br>
+  <br>
+	Every time that a man in a “locker room” conversation (in person or online) chooses not to refute the belittling and sexist comments his so-called friends are making, he enables the bro culture. Every time that a person witnesses a coach winking at a female debater and pretends he didn’t see it happen, he enables the bro culture. And every time that a judge watches a male debater make his opponent uncomfortable (through his tone, commentary, or gestures) during cross-examination and doesn’t do anything about it, he enables the bro culture. This is the behavior that allows it to continue. Being complicit is no better than being the perpetrator. 
+  <br>
+  <br>
+	Perhaps most concerning is the message that bystanderism sends to women in the community. Whether they intend to or not, bystanders discourage them from calling people out; their behavior makes it very clear that sucking it up is preferable to standing up for what is right. It also signals that they don’t think women are worth sticking up for. 
+  <br>
+  <br>
+When women have the courage to confront these “bros,” the communal reaction is rarely ever positive. Many grow defensive and slander the women as people who are “overreacting” and “hypersensitive,” or trying to make things “all about gender.” I’ve witnessed countless scenarios where male coaches and even staff members at camps audibly laugh at a woman when she speaks out. They find it amusing. Other times, in egregious situations where it is impossible to deny that the perpetrator is a sexist, men will support individuals who voice their concerns. But in record time, those same supportive men will have no issue offering the same sexist debater or coach a place at the front of the room as they celebrate. And once again, women remain in the back -- uncomfortable, demoralized, upset.
+<br>
+<br>
+	I find it astonishing how so many men in debate jump at the chance to assert their concern for women’s equality and safety while they simultaneously permit and tolerate the same behaviors that prevent those goals from becoming possible. It’s as if something as trivial as having a Planned Parenthood sticker on your laptop or reading a fem K absolves you of all complicity.
+  <br>
+  <br>
+It’s not enough to claim that “you didn’t know” or that “it’s not your place.” Implicit biases may be somewhat uncontrollable, but bystanderism is a conscious choice. The burden shouldn’t lie on women’s shoulders to call people out. 
+<br>
+<br>
+We deserve a place at the front of the room. And until ALL members of the community make an active effort to ensure that that happens, the front of the room will always be reserved for men.
+
+<br>
+<br>
+
+
+Author’s Note (at the bottom):
+I recognize that non-binary and trans individuals in debate are also influenced by the “bro culture" and that their experiences are valid, but their interactions with that culture are nuanced and merit an entirely separate article from this one. This article was intended to be making a descriptive claim about a cultural issue that many female debaters— myself included— have experienced. While this article does use language stemming from a cis-woman position, there’s no reason it doesn’t identify with or exclude sexism faced by other definitions of woman. However, as someone who isn’t non-binary or trans, I don’t know how the experiences of their community align or diverge with mine, and I don’t think it’s right for me to speak for them in this article. I would welcome other articles by members of the LGBTQIA+ community in debate about their interactions with the bro culture.
+
 </p>
+        </section>
+
