Fixed amy's title

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -69,7 +69,7 @@ Julia Wu is a senior at Lake Highland Preparatory School in Florida. After being
             </div>
             <hr style="height:50pt; visibility:hidden;" />
             <div>
-                <h5 style="float:left;"> Amy Pu</h5>
+                <h5 style="float:left;"> Amy Pu: Web Developer | Brown University</h5>
                 <hr style="height:20pt; visibility:hidden;" />
                   <p style="float: left;"><img class= "claire" src="../../assets/images/amy-pu.jpg" ></p>
                   <p>
