Finished lindsey's article

--- a/src/app/lindsey-article/lindsey-article.component.html
+++ b/src/app/lindsey-article/lindsey-article.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col">
           <div class="lindsey-article-header" style="color: black;">
-            Fighting for a Place in the Front <br>
+            Fighting for a Place at the Front <br>
             <p class="small">
               Lindsey Perlman
             </p>
@@ -15,11 +15,13 @@
           </div>
           <p class="article">
           
-
+<i> 
 Thank you to Camille Caldera, Zoe Ewing, Brianna Aaron, Megan Wu, Grant Brown, Carolyn Lau, Ben Koh, and SunHee Simon-Mbong for their input, support, and kindness.
-
+</i>
 <br>
 <br>
+</p>
+<p class="article2">
 The lecture hall, packed full of people, erupted with applause as the timer from the 2ar went off. Within seconds, the front of the room became saturated with swarms of coaches and competitors. But of those thirty or so people that flooded the front of the room, something was missing: not a single woman was among them. Left out of the celebration, every woman in the room remained in the audience, watching from their seats as male coaches and debaters paraded around them exuberantly.
 
 <br>
@@ -75,12 +77,87 @@ It’s not enough to claim that “you didn’t know” or that “it’s not yo
 We deserve a place at the front of the room. And until ALL members of the community make an active effort to ensure that that happens, the front of the room will always be reserved for men.
 
 <br>
-<br>
-
-
-Author’s Note (at the bottom):
-I recognize that non-binary and trans individuals in debate are also influenced by the “bro culture" and that their experiences are valid, but their interactions with that culture are nuanced and merit an entirely separate article from this one. This article was intended to be making a descriptive claim about a cultural issue that many female debaters— myself included— have experienced. While this article does use language stemming from a cis-woman position, there’s no reason it doesn’t identify with or exclude sexism faced by other definitions of woman. However, as someone who isn’t non-binary or trans, I don’t know how the experiences of their community align or diverge with mine, and I don’t think it’s right for me to speak for them in this article. I would welcome other articles by members of the LGBTQIA+ community in debate about their interactions with the bro culture.
-
 </p>
+<div class="lindsey-article-header" style="color: black;">
+<p class="small">
+SOLUTION
+</p>
+<hr style="height: 3px; width: 25%; background-color: #3c3059">
+<hr style="height: 2px; width: 15%; background-color: #84b7b1">
+</div>
+<p class="article2">
+Resisting this culture requires a communal effort-- not just one that is limited to coaches and educators, but one that galvanizes even novice debaters at their first tournament, before they witness sexism from successful older debaters and start to believe it is acceptable -- or “cool.”
+<br>
+<br>
+<u> For adults and institutions: </u>
+<br>
+  
+    <li> 
+        At the school level, adults (regardless of debate knowledge) need to stop being oblivious to growing gender divisions on their teams. Instead, they should work with women, non-binary individuals, and other minorities in the community and make an active effort cultivate an inclusive, integrated, safe team environment during practices.
+        </li>
+        <li> 
+            At the tournament level, coaches and chaperones need to accept that part of their role is to stand up for their students, both in and out of round. If their students feel intimidated or anxious, they need to be there to diffuse the situation and provide emotional support. This also means being present during scenarios like the anecdote at the beginning of the article. In addition to caring for their own students, coaches and chaperones should play an active role monitoring all students at national tournaments and camps.
+            </li>
+            <li> 
+            Large debate institutions, such as summer camps, need to actively vet all of their staff before they are hired by asking women and minorities in the community for input, and taking it seriously. If a prospective staff member exhibited concerning behavior in the past, <u> s/he/they should NOT be hired,</u> regardless of his/her/their competitive success or if s/he/they have worked at the organization before.
+            </li>
+            <li> 
+            In addition, camps should put “first year outs” under extra scrutiny, providing them with extra gender bias training before the camp begins. A startling trend is the high levels of ignorance and sexist attitudes among high school graduates in debate; this needs to be corrected before those graduates are put into positions of power over students only years younger than them.
+            </li>
+            <li> 
+            When any adult in the community witnesses unacceptable behavior from another adult towards a student or debater, s/he/they need to report it to the necessary authorities and ensure that said adult is held accountable. This includes ensuring that said adult is not hired by other schools or debate institutes where s/he/they could potentially put more students at risk.
+            </li>
+  <br>
+ 
+
+ 
+<u>
+For judges:
+</u>
+<br>
+<li > 
+At tournaments, all judges, regardless of experience, need to call out debaters when they are rude or antagonistic and tank their speaker points. If warranted, said debaters should be given a loss.
+</li>
+<li> 
+Judges should report inappropriate conduct or behavior to tournament officials AND to the coaches (or schools) of the perpetrators.
+</li>
+<li> 
+Judges need to dissipate “bro-crowds” and clear rooms.
+</li>
+<li> 
+Although this should be a given, judges should not defame debaters for their choice of attire or for the way they speak (eg. having a “shrill” voice).
+</li>
+
+ 
+<br>
+<u> 
+For debaters, first year outs, and younger adults:
+</u>
+<br>
+<li> 
+
+
+Male debaters need to be willing to call out even their closest friends for sexist behaviors, regardless of whether they occured online in large group chats or in person.
+</li>
+<li>
+Male debaters should make an effort to include women, non-binary individuals, and other minorities into their friend groups, celebrations, and conversations. Nobody should have to point out that disparities exist to men, such as in the anecdote, and these situations shouldn’t come as a surprise.
+</li>
+<li>
+When a male debater is called out, he should reflect on his behavior instead of instinctively defending it.
+</li>
+</p>
+
+<div class="lindsey-article-header" style="color: black;">
+    <p class="small">
+    AUTHOR'S NOTE
+    </p>
+    <hr style="height: 3px; width: 25%; background-color: #3c3059">
+    <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+    </div>
+    <p class="article2">
+
+I recognize that non-binary and trans individuals in debate are also influenced by the “bro culture" and that their experiences are valid, but their interactions with that culture are nuanced and merit an entirely separate article from this one. This article was intended to be making a descriptive claim about a cultural issue that many female debaters— myself included— have experienced. While this article does use language stemming from a cis-woman position, there’s no reason it doesn’t identify with or exclude sexism faced by other definitions of woman. However, as someone who isn’t non-binary or trans, I don’t know how the experiences of their community align or diverge with mine, and I don’t think it’s right for me to speak for them in this article. I would welcome other articles by members of the LGBTQIA+ community in debate about their interactions with the bro culture.
+</p>
+
         </section>
 
