--- a/src/app/lindsey-article/lindsey-article.component.css
+++ b/src/app/lindsey-article/lindsey-article.component.css
@@ -36,4 +36,9 @@
     padding-left: 10%;
     padding-right: 10%;
 }
+.article2{
+    text-align: left;
+    padding-left: 10%;
+    padding-right: 10%;
+}
 
